--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="java.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
     <title>Calculator</title>
   </head>
   <body>
@@ -27,7 +28,7 @@
         <button class="operator">*</button>
         <button class="operator">/</button>
         <button class="equals-key">=</button>
-        <button class="clear-button">Clear</button>
+        <button class="clear">Clear</button>
       </div>
     </div>
   </body>
