--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
   <body>
     <div class="calculator">
       <div class="screen">
-        <div>Dummy Text</div>
+        0
       </div>
       <div class="button-container">
         <button class="number" value="7">7</button>
         <button class="number" value="8">8</button>
         <button class="number" value="9">9</button>
-        <button class="operator">/</button>
+        <button class="operator">&divide;</button>
         <button class="number" value="4">4</button>
         <button class="number" value="5">5</button>
         <button class="number" value="6">6</button>
-        <button class="operator">*</button>
+        <button class="operator">&times;</button>
         <button class="number" value="1">1</button>
         <button class="number" value="2">2</button>
         <button class="number" value="3">3</button>
-        <button class="operator">-</button>
+        <button class="operator">&minus;</button>
         <button class="clear">Clear</button>
         <button class="number" value="0">0</button>
-        <button class="equals-key">=</button>
-        <button class="operator">+</button>
+        <button class="equals-key">&equals;</button>
+        <button class="operator">&plus;</button>
       </div>
     </div>
   </body>
