--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="java.js" defer></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>Calculator</title>
   </head>
   <body>
     <div class="calculator">
-      <div class="screen">
-        0
-      </div>
+      <div class="screen">0</div>
       <div class="button-container">
         <button class="number" value="7">7</button>
         <button class="number" value="8">8</button>
