--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="screen">0</div>
+      <div class="screen"></div>
       <div class="button-container">
         <button class="number" value="7">7</button>
         <button class="number" value="8">8</button>
